# rules_go

./: .bazelrc  .bazelversion  MODULE.bazel  WORKSPACE
go/private/: context.bzl  extensions.bzl  nogo.bzl  repositories.bzl  sdk.bzl
go/private/rules/: transition.bzl
go/tools/builders/: env.go  filter_buildid.go  generate_test_main.go  info.go  stdlib.go
go/tools/bzltestutil/: BUILD.bazel  lcov.go  lcov_testdeps.go  lcov_testdeps_go1.18.go
tests/core/cgo/: cc_libs_common.go
tests/core/coverage/: BUILD.bazel
tests/core/go_plugin_with_proto_library/: BUILD.bazel
tests/core/stdlib/: BUILD.bazel  hermeticity_test.go
tests/examples/executable_name/: BUILD.bazel
