module(
    name = "io_bazel_rules_go",
    version = "0.29.0",
    compatibility_level = 1,
    toolchains_to_register = ["@go_1_17_5//:all"],
)

bazel_dep(name = "bazel_skylib", version = "1.1.1")
bazel_dep(name = "platforms", version = "0.0.4")

go_rules_dependencies = use_extension(
    "@io_bazel_rules_go//go/private:repositories.bzl",
    "install_go_rules_dependencies",
)
use_repo(
    go_rules_dependencies,
    "org_golang_x_tools",
    "org_golang_x_sys",
    "org_golang_x_xerrors",
    "org_golang_google_protobuf",
    "com_github_golang_protobuf",
    "com_github_mwitkow_go_proto_validators",
    "com_github_gogo_protobuf",
    "gogo_special_proto",
    "org_golang_google_genproto",
    "go_googleapis",
    "io_bazel_rules_nogo",
)

go = use_extension("@io_bazel_rules_go//go/private:extensions.bzl", "go")
go.download_sdk(name = "go_1_17_5", version = "1.17.5")
use_repo(go, "go_1_17_5")

bazel_dep(name = "rules_proto", version = "4.0.0", dev_dependency = True)
bazel_dep(name = "protobuf", version = "3.19.0", repo_name = "com_google_protobuf", dev_dependency = True)
